202008170
Ajout décodage balise détresse 406 de F4EHY

202007310
Add support for B910 WebCam ID 046d:0823

202007240
Load new Waveshare 35a overlay
Re-enable dist-upgrade

202007230
Bugfix 7 inch screen after dist-upgrade
Don't dist-upgrade because of no 3.5 inch screen support

202007012
Add vlc with ffmpeg receive player
Overlay of parameters on vlc ffmpeg
Enabled MER display for DVB-S reception
Large MER on UDP player page
Receive freq entered and displayed in MHz
Bugfix intermittent stream display fault
Bugfix tuner power control

202006070
Switch default audio output from Menu 3
EasyCap Comp Video display with audio
C920 audio available in Comp Vid out TX mode
PTT pin set for LimeDVB TX modes when selected from console

202005110
Improve EasyCap audio

202004302
Preserve Lime Calibration Status during updates

202004301
Graceful shutdown for VLC

202004300
LongMynd LNB voltage control and MiniTiouner Express support
VLC Player for limited H265 display in LongMynd
Revised Comp Video monitor (display of EasyCap input)
Pi Cam and C920 monitor modes
Screen capture for LongMynd, Comp Video, Pi Cam
Screen capture for C920, TS and Stream Viewers
Automatic graphics restart after graphics crash
Use 2020-02-13 Version of Buster Lite

202004120
Ajout bip si pas de carte son H264

202003301
Reduce delay for DVB-S in LimeDVB mode

202003300
Add support for LimeSDR USB

202003280
Update LongMynd RX for new QO-100 Beacon

202003141
Correct Lime Transmit Stop from Console Menu

202003140
Added QO-100 Frequencies to Menu
Added keyedtxtouch mode
Adjust C920 Power Line Frequency

202002290
Add IPTS Viewer
Correct format of null packets in limesdr_dvb.cpp
Reduce frame rate for C920

202002142
Correct LimeDVB Output level at 1000 kS

202002141
Rotate 7 inch Screen and other bug fixes

202002140
Based on Buster 2020-02-05
H264 encoding for BATC Streamer corrected
Added C920 as working video source

202001310
Update to LimeSuite 20.01
Initial Buster Release